--- a/index.html
+++ b/index.html
@@ -11,8 +11,29 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- First, create a form tag where our inputs will be nested -->
+<form > 
+  <label for="fullname">fullname</label>
+  <input type="text" id="fullname" name ="fullname" placeholder="Enter name" required >
 
 
+<label for="email">email</label>
+<input type="text" name="email" id="email" placeholder="Enter Email">
+
+<label for="phone">phone</label>
+<input type="tel" id="phone" name="phone" placeholder="Enter Telephone number" required>
+
+<label for="message">message</label>
+<input type="textarea" id="message" name="message" placeholder="Enter Message" required>
+
+<label for="checkbox">checkbox</label>
+<input type="checkbox" id="checkbox" value="work" > work with me <br />
+<input type="checkbox" id="checkbox" value="work" >
+<input type="checkbox" id="checkbox" value="work" >
+<input type="checkbox" id="checkbox" value="work" >
+
+<input type="submit"  id="submit" value="personal info submit" required>
+
+</form>
       <!-- Add a label for 'fullname'-->
 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
